--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>ITP_Feedback</title>
+		<title>Feedback</title>
 		<link rel="stylesheet" href="css/third_party/bootstrap.min.css">
 		<link rel="stylesheet" href="css/third_party/vex.css">
 		<link rel="stylesheet" href="css/third_party/vex-theme-wireframe.css">
