--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
 		<div class="container">
 			<div class="info">
-				<div id="course_name">Course Name</div>
-				<div id="teacher_name">Teacher Name</div>
-				<div id="time_space">Course Time and Location</div>
-				<div id="course_number">Course Number</div>
+				<div id="course_name">Course Name: </div>
+				<div id="teacher_name">Teacher Name: </div>
+				<div id="time_space">Course Time: </div>
+				<div id="course_number">Course Number: </div>
 			</div>
 
 			<div class="inputHolder">
@@ -59,19 +59,60 @@
 				</li>
 			</ul>
 			<button id="add_skill">Add</button>
+			<button id="update_skill">Update</button>
 
-			<div class="studentHolder">
-				<div class="row">
+			<div id="studentHolder">
+				<div class="row" id="Laura Juo-Hsin">
 					<div class="col-xs-6 col-lg-4">
 						<h4>Laura Juo-Hsin, Chen</h4>
 						<img src="/images/laura2-300x300.png" class="img-responsive">
 					</div>
 					<div class="col-xs-12 col-sm-6 col-lg-8 eval_scores">
-						<li>Fabrication</li>
-						<li>Participation</li>
-						<li>Concept developing</li>
-						<li>Organizing</li>
-						<li>Presentation</li>
+						<li>Fabrication
+							<span class="star-rating">
+								<input type="radio" name="Laura Juo-HsinFabricationRating" value="1"><i></i>
+								<input type="radio" name="Laura Juo-HsinFabricationRating" value="2"><i></i>
+								<input type="radio" name="Laura Juo-HsinFabricationRating" value="3"><i></i>
+								<input type="radio" name="Laura Juo-HsinFabricationRating" value="4"><i></i>
+								<input type="radio" name="Laura Juo-HsinFabricationRating" value="5"><i></i>
+							</span>
+						</li>
+						<li>Participation
+							<span class="star-rating">
+								<input type="radio" name="Laura Juo-HsinParticipationRating" value="1"><i></i>
+								<input type="radio" name="Laura Juo-HsinParticipationRating" value="2"><i></i>
+								<input type="radio" name="Laura Juo-HsinParticipationRating" value="3"><i></i>
+								<input type="radio" name="Laura Juo-HsinParticipationRating" value="4"><i></i>
+								<input type="radio" name="Laura Juo-HsinParticipationRating" value="5"><i></i>
+							</span>
+						</li>
+						<li>Concept developing
+							<span class="star-rating">
+								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="1"><i></i>
+								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="2"><i></i>
+								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="3"><i></i>
+								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="4"><i></i>
+								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="5"><i></i>
+							</span>
+						</li>
+						<li>Organizing
+							<span class="star-rating">
+								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="1"><i></i>
+								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="2"><i></i>
+								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="3"><i></i>
+								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="4"><i></i>
+								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="5"><i></i>
+							</span>
+						</li>
+						<li>Presentation
+							<span class="star-rating">
+								<input type="radio" name="Laura Juo-HsinPresentationRating" value="1"><i></i>
+								<input type="radio" name="Laura Juo-HsinPresentationRating" value="2"><i></i>
+								<input type="radio" name="Laura Juo-HsinPresentationRating" value="3"><i></i>
+								<input type="radio" name="Laura Juo-HsinPresentationRating" value="4"><i></i>
+								<input type="radio" name="Laura Juo-HsinPresentationRating" value="5"><i></i>
+							</span>
+						</li>
 					</div>
 				</div>
 			</div>
