--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 				<div class="row" id="Laura Juo-Hsin">
 					<div class="col-xs-6 col-lg-4">
 						<h4>Laura Juo-Hsin, Chen</h4>
-						<img src="/images/laura2-300x300.png" class="img-responsive">
+						<img src="images/laura2-300x300.png" class="img-responsive">
 					</div>
 					<div class="col-xs-12 col-sm-6 col-lg-8 eval_scores">
 						<li>Fabrication
