--- a/index.html
+++ b/index.html
@@ -33,9 +33,7 @@
 			<div class="page-header"> 
 				<h3>Objective Score Elements</h3>
 			</div>
-			<!-- <span class="label label-default">Skill_0</span>
-			<span class="label label-default">Skill_1</span>
-			<span class="label label-default">Skill_3</span> -->
+
 			<ul id="eval_items">
 				<li>
 					Fabrication
@@ -65,7 +63,7 @@
 				<div class="row" id="Laura Juo-Hsin">
 					<div class="col-xs-6 col-lg-4">
 						<h4>Laura Juo-Hsin, Chen</h4>
-						<img src="/images/laura2-300x300.png" class="img-responsive">
+						<img src="images/laura2-300x300.png" class="img-responsive">
 					</div>
 					<div class="col-xs-12 col-sm-6 col-lg-8 eval_scores">
 						<li>Fabrication
@@ -113,6 +111,9 @@
 								<input type="radio" name="Laura Juo-HsinPresentationRating" value="5"><i></i>
 							</span>
 						</li>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-lg-8 eval_text">
+						<textarea id="LauraTextMiddle" placeholder="General feedback and opportunities to Laura." style="width: 80%; height: 5em;"></textarea>
 					</div>
 				</div>
 			</div>
