add comments and notes

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 				<div id="course_number">Course Number: </div>
 			</div>
 
+			<!-- Textbox input -->
 			<div class="inputHolder">
 				<textarea id="textStart" placeholder="Stuff to stay at the begining of all emails."></textarea>
 				<textarea id="textEnd" placeholder="Stuff to stay at the end of all emails."></textarea>
 			</div>
 
+			<!-- Ranking elements at the top-->
 			<div class="page-header"> 
 				<h3>Objective Score Elements</h3>
 			</div>
@@ -59,7 +61,9 @@
 			<button id="add_skill">Add</button>
 			<button id="update_skill">Update</button>
 
+			<!-- Div for all the students -->
 			<div id="studentHolder">
+				<!-- Fake student, will delete later -->
 				<div class="row" id="Laura Juo-Hsin">
 					<div class="col-xs-6 col-lg-4">
 						<h4>Laura Juo-Hsin, Chen</h4>
@@ -118,6 +122,7 @@
 				</div>
 			</div>
 
+			<!-- Bottom button to SAVE ALL data -->
 			<div class="buttonHolder">
 				<button id="saveAllButton" onclick="saveAllButton(event)" style="">Save All</button>
 			</div>
