--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
 				<div id="course_number">Course Number: </div>
 			</div>
 
+			<!-- Textbox input -->
 			<div class="inputHolder">
 				<textarea id="textStart" placeholder="Stuff to stay at the begining of all emails."></textarea>
 				<textarea id="textEnd" placeholder="Stuff to stay at the end of all emails."></textarea>
 			</div>
 
+			<!-- Ranking elements at the top-->
 			<div class="page-header"> 
 				<h3>Objective Score Elements</h3>
 			</div>
@@ -59,65 +61,10 @@
 			<button id="add_skill">Add</button>
 			<button id="update_skill">Update</button>
 
-			<div id="studentHolder">
-				<div class="row" id="Laura Juo-Hsin">
-					<div class="col-xs-6 col-lg-4">
-						<h4>Laura Juo-Hsin, Chen</h4>
-						<img src="images/laura2-300x300.png" class="img-responsive">
-					</div>
-					<div class="col-xs-12 col-sm-6 col-lg-8 eval_scores">
-						<li>Fabrication
-							<span class="star-rating">
-								<input type="radio" name="Laura Juo-HsinFabricationRating" value="1"><i></i>
-								<input type="radio" name="Laura Juo-HsinFabricationRating" value="2"><i></i>
-								<input type="radio" name="Laura Juo-HsinFabricationRating" value="3"><i></i>
-								<input type="radio" name="Laura Juo-HsinFabricationRating" value="4"><i></i>
-								<input type="radio" name="Laura Juo-HsinFabricationRating" value="5"><i></i>
-							</span>
-						</li>
-						<li>Participation
-							<span class="star-rating">
-								<input type="radio" name="Laura Juo-HsinParticipationRating" value="1"><i></i>
-								<input type="radio" name="Laura Juo-HsinParticipationRating" value="2"><i></i>
-								<input type="radio" name="Laura Juo-HsinParticipationRating" value="3"><i></i>
-								<input type="radio" name="Laura Juo-HsinParticipationRating" value="4"><i></i>
-								<input type="radio" name="Laura Juo-HsinParticipationRating" value="5"><i></i>
-							</span>
-						</li>
-						<li>Concept developing
-							<span class="star-rating">
-								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="1"><i></i>
-								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="2"><i></i>
-								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="3"><i></i>
-								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="4"><i></i>
-								<input type="radio" name="Laura Juo-HsinConcept developingRating" value="5"><i></i>
-							</span>
-						</li>
-						<li>Organizing
-							<span class="star-rating">
-								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="1"><i></i>
-								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="2"><i></i>
-								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="3"><i></i>
-								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="4"><i></i>
-								<input type="radio" name="Laura Juo-HsinOrganizingRating" value="5"><i></i>
-							</span>
-						</li>
-						<li>Presentation
-							<span class="star-rating">
-								<input type="radio" name="Laura Juo-HsinPresentationRating" value="1"><i></i>
-								<input type="radio" name="Laura Juo-HsinPresentationRating" value="2"><i></i>
-								<input type="radio" name="Laura Juo-HsinPresentationRating" value="3"><i></i>
-								<input type="radio" name="Laura Juo-HsinPresentationRating" value="4"><i></i>
-								<input type="radio" name="Laura Juo-HsinPresentationRating" value="5"><i></i>
-							</span>
-						</li>
-					</div>
-					<div class="col-xs-12 col-sm-6 col-lg-8 eval_text">
-						<textarea id="LauraTextMiddle" placeholder="General feedback and opportunities to Laura." style="width: 80%; height: 5em;"></textarea>
-					</div>
-				</div>
-			</div>
+			<!-- Div for all the students -->
+			<div id="studentHolder"></div>
 
+			<!-- Bottom button to SAVE ALL data -->
 			<div class="buttonHolder">
 				<button id="saveAllButton" onclick="saveAllButton(event)" style="">Save All</button>
 			</div>
