no Laura, keep the ranking history (if any) after update

--- a/index.html
+++ b/index.html
@@ -37,26 +37,11 @@
 			</div>
 
 			<ul id="eval_items">
-				<li>
-					Fabrication
-					<i class="js-remove">X</i>
-				</li>
-				<li>
-					Participation
-					<i class="js-remove">X</i>
-				</li>
-				<li>
-					Concept developing
-					<i class="js-remove">X</i>
-				</li>
-				<li>
-					Organizing
-					<i class="js-remove">X</i>
-				</li>
-				<li>
-					Presentation
-					<i class="js-remove">X</i>
-				</li>
+				<li class="Fabrication">Fabrication<i class="js-remove">X</i></li>
+				<li class="Participation">Participation<i class="js-remove">X</i></li>
+				<li class="Concept developing">Concept developing<i class="js-remove">X</i></li>
+				<li class="Organizing">Organizing<i class="js-remove">X</i></li>
+				<li class="Presentation">Presentation<i class="js-remove">X</i></li>
 			</ul>
 			<button id="add_skill">Add</button>
 			<button id="update_skill">Update</button>
