update for gmail api

--- a/index_gmail.html
+++ b/index_gmail.html
@@ -93,7 +93,7 @@
 				});
 			}
 
-			function init() {
+			function initG() {
 				gapi.client.setApiKey('AIzaSyAHS8f9DRvkKEvsGcB12jwMfCmzBkXCdC4');
 				gapi.client.load('urlshortener', 'v1').then(makeRequest);
 			}
@@ -103,7 +103,7 @@
 		<script src="js/third_party/bootstrap.min.js"></script>
 		<script src="js/third_party/Sortable.js"></script>
 		<script src="js/third_party/vex.combined.min.js"></script>
-		<script src="https://apis.google.com/js/client.js?onload=init"></script>
+		<script src="https://apis.google.com/js/client.js?onload=initG"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 
 	</body>
