--- a/index_gmail.html
+++ b/index_gmail.html
@@ -32,6 +32,10 @@
 		<h1>
 			ITP Feedback Creator
 		</h1>
+		
+		<!-- Gmail API -->
+		<div id="results"></div>
+		<button conclick="auth();">Authorize</button>
 
 		<div class="container">
 			<div class="info">
@@ -71,9 +75,7 @@
 			</div>
 		</div>
 
-		<div id="results"></div>
 
-		<button conclick="auth();">Authorize</button>
 
 		<script type="text/javascript">
 			function appendResults(text) {
