--- a/index_gmail.html
+++ b/index_gmail.html
@@ -32,7 +32,7 @@
 		<h1>
 			ITP Feedback Creator
 		</h1>
-		
+
 		<!-- Gmail API -->
 		<div id="results"></div>
 		<button conclick="auth();">Authorize</button>
@@ -106,7 +106,7 @@
 		<script src="js/third_party/Sortable.js"></script>
 		<script src="js/third_party/vex.combined.min.js"></script>
 		<script src="https://apis.google.com/js/client.js?onload=initG"></script>
-		<script type="text/javascript" src="js/script.js"></script>
+		<!-- <script type="text/javascript" src="js/script.js"></script> -->
 
 	</body>
 </html>
