--- a/index_gmail.html
+++ b/index_gmail.html
@@ -105,8 +105,8 @@
 		<script src="js/third_party/bootstrap.min.js"></script>
 		<script src="js/third_party/Sortable.js"></script>
 		<script src="js/third_party/vex.combined.min.js"></script>
-		<script src="https://apis.google.com/js/client.js?onload=initG"></script>
-		<!-- <script type="text/javascript" src="js/script.js"></script> -->
+		<!-- <script src="https://apis.google.com/js/client.js?onload=initG"></script> -->
+		<script type="text/javascript" src="js/script.js"></script>
 
 	</body>
 </html>
