--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
 			<!-- Textbox input -->
 			<div class="inputHolder">
-				<textarea id="textStart" placeholder="Stuff to stay at the begining of all emails."></textarea>
-				<textarea id="textEnd" placeholder="Stuff to stay at the end of all emails."></textarea>
+				<textarea id="textStart" placeholder="Stuff to stay at the begining of all emails. Eg. It's nice to have you in my class this semester..." >It's nice to have you in my class this semester.</textarea>
+				<textarea id="textEnd" placeholder="Stuff to stay at the end of all emails. Eg. Wish you the best. Get weird!">Wish you the best. Get weird!</textarea>
 			</div>
 
 			<!-- Ranking elements at the top-->
