add html2Canvas & mailto

--- a/index.html
+++ b/index.html
@@ -59,6 +59,8 @@
 		<script src="js/third_party/bootstrap.min.js"></script>
 		<script src="js/third_party/Sortable.js"></script>
 		<script src="js/third_party/vex.combined.min.js"></script>
+		<script src="js/third_party/html2canvas_v05.js"></script>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 
 	</body>
