--- a/index_gmail.html
+++ b/index_gmail.html
@@ -10,6 +10,22 @@
 		<link rel="stylesheet" href="css/third_party/vex.css">
 		<link rel="stylesheet" href="css/third_party/vex-theme-wireframe.css">
 		<link rel="stylesheet" href="css/style.css">
+
+		<script src="https://apis.google.com/js/client.js"></script>
+		
+		<script type="text/javascript">
+			function auth() {
+				var config = {
+					'client_id': '103606109290-ejov30358doqk7ta0hg170nai2kviej2.apps.googleusercontent.com',
+					'scope': 'https://www.googleapis.com/auth/urlshortener'
+				};
+
+				gapi.auth.authorize(config, function(){
+					console.log('login complete');
+					console.log(gapi.auth.getToken());
+				});
+			}
+		</script>
 	</head>
 
 	<body>
@@ -27,8 +43,8 @@
 
 			<!-- Textbox input -->
 			<div class="inputHolder">
-				<textarea id="textStart" placeholder="Stuff to stay at the begining of all emails. Eg. It's nice to have you in my class this semester..." >It's nice to have you in my class this semester.</textarea>
-				<textarea id="textEnd" placeholder="Stuff to stay at the end of all emails. Eg. Wish you the best. Get weird!">Wish you the best. Get weird!</textarea>
+				<textarea id="textStart" placeholder="Stuff to stay at the begining of all emails."></textarea>
+				<textarea id="textEnd" placeholder="Stuff to stay at the end of all emails."></textarea>
 			</div>
 
 			<!-- Ranking elements at the top-->
@@ -55,12 +71,39 @@
 			</div>
 		</div>
 
+		<div id="results"></div>
+
+		<button conclick="auth();">Authorize</button>
+
+		<script type="text/javascript">
+			function appendResults(text) {
+		        var results = document.getElementById('results');
+		        results.appendChild(document.createElement('P'));
+		        results.appendChild(document.createTextNode(text));
+		      }
+
+			function makeRequest() {
+				var request = gapi.client.urlshortener.url.get({
+					'shortUrl': 'http://goo.gl/fbsS'
+				});
+				request.then(function(response) {
+					appendResults(response.result.longUrl);
+				}, function(reason) {
+					console.log('Error: ' + reason.result.error.message);
+				});
+			}
+
+			function init() {
+				gapi.client.setApiKey('AIzaSyAHS8f9DRvkKEvsGcB12jwMfCmzBkXCdC4');
+				gapi.client.load('urlshortener', 'v1').then(makeRequest);
+			}
+		</script>
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 		<script src="js/third_party/bootstrap.min.js"></script>
 		<script src="js/third_party/Sortable.js"></script>
 		<script src="js/third_party/vex.combined.min.js"></script>
-		<script src="js/third_party/html2canvas_v05.js"></script>
-		<script src="http://cdnjs.cloudflare.com/ajax/libs/p5.js/0.4.19/p5.js"></script>
+		<script src="https://apis.google.com/js/client.js?onload=init"></script>
 		<script type="text/javascript" src="js/script.js"></script>
 
 	</body>
