dynamic classes generator

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		</h1>
 
 		<div class="container">
+			<button id="login" class="btn btn-default">Log In</button>
+			
 			<div class="info">
 				<div id="course_name">Course Name: </div>
 				<div id="teacher_name">Teacher Name: </div>
