add gotExistingFeedback function

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 		<div class="container">
 			<button id="login" class="btn btn-default">Log In</button>
-			
+
 			<div class="info">
 				<div id="course_name">Course Name: </div>
 				<div id="teacher_name">Teacher Name: </div>
@@ -29,8 +29,8 @@
 
 			<!-- Textbox input -->
 			<div class="inputHolder">
-				<textarea id="textStart" placeholder="Stuff to stay at the begining of all emails. Eg. It's nice to have you in my class this semester..." >It's nice to have you in my class this semester.</textarea>
-				<textarea id="textEnd" placeholder="Stuff to stay at the end of all emails. Eg. Wish you the best. Get weird!">Wish you the best. Get weird!</textarea>
+				<textarea id="all_textStart" placeholder="Stuff to stay at the begining of all emails. Eg. It's nice to have you in my class this semester..." >It's nice to have you in my class this semester.</textarea>
+				<textarea id="all_textEnd" placeholder="Stuff to stay at the end of all emails. Eg. Wish you the best. Get weird!">Wish you the best. Get weird!</textarea>
 			</div>
 
 			<!-- Ranking elements at the top-->
