--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
 				<h3>Objective Score Elements</h3>
 			</div>
 
-			<ul id="eval_items">
+			<!-- <ul id="eval_items">
 				<li class="Fabrication">Fabrication<i class="js-remove">X</i></li>
 				<li class="Participation">Participation<i class="js-remove">X</i></li>
 				<li class="Concept developing">Concept developing<i class="js-remove">X</i></li>
 				<li class="Organizing">Organizing<i class="js-remove">X</i></li>
 				<li class="Presentation">Presentation<i class="js-remove">X</i></li>
-			</ul>
+			</ul> -->
+
+			<ul id="eval_items_new"></ul>
+
 			<button id="add_skill" class="btn btn-default">Add</button>
 			<button id="update_skill" class="btn btn-default">Update</button>
 
